fixed bug on modal and invisible div click event

--- a/index.css
+++ b/index.css
@@ -87,17 +87,21 @@ body{
   /* top: 500px; */
 }
 
-/* .close{
+.close{
   color: black;
   text-align: center;
   width: 10px;
   height: 10px;
   position: absolute;
   right: 0px;
-  background-color: white;
-  border: 2px solid white;
+  border: 2px solid;
+  cursor: pointer;
+  border-radius: 0 15px 0 0;
+
+  /* background-color: white; */
+  /* border: 2px solid white; */
   padding: 10px;
-} */
+}
 
 .movieWrapper{
   grid-template-columns: .5fr .5fr;
